[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "central-actions"
version = "0.0.1"
description = "Centralized repository for custom GitHub Actions"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

[project.optional-dependencies]
style = ["pre-commit>=4.0.0"]

[tool.setuptools]
packages = []
